# money_dashboard

./: .gitignore  README.md  app.py  dash_format.py  dashboard_testing_notebook.ipynb  gnucash_commodity_prices.csv  gnucash_export.csv  money_dashboard.service  pyproject.toml  utils.py  wsgi.py
data/: assets_latest_summary.csv  assets_time_series.csv  investments_average_returns.csv  investments_grouped_by_type.csv  investments_summary.csv  retirement_average_returns.csv  retirement_grouped_by_type.csv  retirement_price_time_series.csv  retirement_summary.csv  retirement_value_model.csv  retirement_value_model_.csv  update_log.json
pages/: assets.py  info.py  investments.py  retirement.py  retirement_model.py
src/: app.py
src/data/: ids.py
src/money_dashboard/: assets.py  dash_format.py  data.py  gnucash_export.py  investments.py  retirement.py
src/money_dashboard/data/: commodities_data.json
src/pages/: assets.py  info.py  investments.py  retirement.py  retirement_model.py
src/utils/: utils.py
tests/: test_data.py  test_retirement_model.py
